# ArduinoC

./: CMakeLists.txt  Makefile  README.md  monitor.py
Arduino-Makefile/: Arduino.mk
arduino-libraries/arduino/: Arduino.h
arduino-libraries/include/: assert.h  stdio.h  unistd.h
src/: BigInt.cpp  BigInt.h  main.cpp  main_test.cpp
